Improve twig and less structure; add new features.

--- a/generators/app/templates/static/src/less/atom/definition-lists.less
+++ b/generators/app/templates/static/src/less/atom/definition-lists.less
@@ -14,7 +14,7 @@
         }
 
         dd {
-            margin-left: @dl-sm-dt-width + (@grid-gutter-width / 2);
+            margin-left: @dl-sm-dt-width + @gutter-sm;
         }
     }
 
@@ -24,7 +24,7 @@
         }
 
         dd {
-            margin-left: @dl-lg-dt-width + (@grid-gutter-width / 2);
+            margin-left: @dl-lg-dt-width + @gutter-sm;
         }
     }
 }
