--- a/generators/app/templates/static/src/less/atom/links.less
+++ b/generators/app/templates/static/src/less/atom/links.less
@@ -54,8 +54,7 @@ a,
     transition: none; // prevent stucking of transitions
 
     // Default slyles
-    > .icon {
-        vertical-align: middle;
+    > .i-icon {
         margin-top: @link-icon-shift;
     }
 
