--- a/generators/app/templates/static/src/less/components/app-footer.less
+++ b/generators/app/templates/static/src/less/components/app-footer.less
@@ -2,17 +2,12 @@
 //
 //*
 
-// .c-app-footer {}
+// .c-footer {}
 
+.c-ideil {
+    font-weight: normal;
 
-//## Media
-//
-//*
-
-// @media screen and (max-width: @screen-sm-max) {
-//     .c-app-footer {}
-// }
-
-// @media screen and (min-width: @screen-md-min) {
-//     .c-app-footer {}
-// }
+    a {
+        font-weight: bold;
+    }
+}
