--- a/generators/app/templates/static/src/less/components/app-icons.less
+++ b/generators/app/templates/static/src/less/components/app-icons.less
@@ -1,30 +1,10 @@
-//# Icons
+//# Application (interface) Icons
 //
 //*
 
-
-//## Base
-//
-//*
-
-.icon {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    vertical-align: top;
+.i-icon {
     &:extend(.text-hide);
+
+    display: inline-block;
+    vertical-align: middle;
 }
-
-
-//## Custom
-//
-//*
-
-
-//## Media
-//
-//*
-
-// @media screen and (max-width: @screen-sm-max) {}
-
-// @media screen and (min-width: @screen-md-min) {}
