--- a/generators/app/templates/static/src/less/atom/checkbox-radio.less
+++ b/generators/app/templates/static/src/less/atom/checkbox-radio.less
@@ -15,7 +15,7 @@
     margin-bottom: 10px;
 
     > label {
-        margin-right: floor(@grid-gutter-width / 2);
+        margin-right: @gutter-sm;
     }
 
     input[type=radio],
