--- a/generators/app/templates/static/src/less/components/forms.less
+++ b/generators/app/templates/static/src/less/components/forms.less
@@ -1,11 +1,11 @@
-//# Bootstrap theme
+//# Forms
 //
-//* Custom styles that related only to bootstrap
+//*
 
 
-//## Forms
+//## Input
 //
-//* Extra Small `.form-control` height
+//* Extra small variant
 
 // @input-height-xs:          (floor(@font-size-small * @line-height-small) + (@padding-xs-vertical * 2));
 
@@ -16,12 +16,3 @@
 //     line-height: @line-height-small;
 //     border-radius: @input-border-radius-small;
 // }
-
-
-//## Media
-//
-//*
-
-// @media screen and (max-width: @screen-sm-max) {}
-
-// @media screen and (min-width: @screen-md-min) {}
