--- a/generators/app/templates/static/src/less/components/utilities.less
+++ b/generators/app/templates/static/src/less/components/utilities.less
@@ -3,27 +3,92 @@
 //*
 
 
-.u-nowrap { // instead </nobr>
-    white-space: nowrap;
-}
-
-.u-text-overflow {
-    .text-overflow();
-}
-
-// .u-divider-top {
-//     border-top: 1px solid @gray-lighter;
-// }
-
-// .u-divider-bottom {
-//     border-bottom: 1px solid @gray-lighter;
-// }
-
-
-//## Media
+//## Typography
 //
 //*
 
-// @media screen and (max-width: @screen-sm-max) {}
+.u-spacer-b {
+    margin-bottom: @spacer !important;
+}
 
-// @media screen and (min-width: @screen-md-min) {}
+.u-spacer-b-sm {
+    margin-bottom: @spacer-sm !important;
+}
+
+.u-spacer-b-lg {
+    margin-bottom: @spacer-lg !important;
+}
+
+
+//## Grid
+//
+//*
+
+.u-gutter-x-sm {
+    padding-left: @gutter-sm !important;
+    padding-right: @gutter-sm !important;
+}
+
+.u-gutter-l-sm {
+    padding-left: @gutter-sm !important;
+}
+
+.u-gutter-r-lg {
+    padding-right: @gutter-sm !important;
+}
+
+
+//## Reset
+//
+//*
+
+//### Margins
+
+.u-m-0 {
+    margin: 0 !important;
+}
+
+.u-mt-0 {
+    margin-top: 0 !important;
+}
+
+.u-mb-0 {
+    margin-bottom: 0 !important;
+}
+
+//### Paddings
+
+.u-p-0 {
+    padding: 0 !important;
+}
+
+.u-pl-0 {
+    padding-left: 0 !important;
+}
+
+.u-pr-0 {
+    padding-right: 0 !important;
+}
+
+
+//## Text
+//
+//*
+
+.u-nobr { // instead </nobr>
+    white-space: nowrap;
+}
+
+.u-ellipsis {
+    .text-overflow();
+}
+
+.u-text-hide {
+    &:extend(.text-hide);
+
+    display: block !important;
+    width: 0 !important;
+    height: 0 !important;
+    margin: 0 !important;
+    padding: 0 !important;
+}
