--- a/generators/app/templates/static/src/less/~ui-icons.less
+++ b/generators/app/templates/static/src/less/~ui-icons.less
@@ -1,9 +1,9 @@
-.icon {
+.i-icon {
   background: url( '../img/sprites/ui-icons.png' ) no-repeat;
   background-size: 20px 35px;
 }
 
-.icon.i-arrow-ltr {
+.i-icon.i-arrow-ltr {
   width: 20px;
   height: 35px;
   background-position: 0px 0px;
@@ -15,7 +15,7 @@
 (-o-min-device-pixel-ratio: 2/1),
 (-webkit-min-device-pixel-ratio: 2),
 (min-device-pixel-ratio: 2) {
-.icon {
+.i-icon {
   background: url( '../img/sprites/ui-icons@2x.png' ) no-repeat;
   background-size: 20px 35px;
 }
