--- a/generators/app/templates/static/layouts/_includes/_parts/app-footer.twig
+++ b/generators/app/templates/static/layouts/_includes/_parts/app-footer.twig
@@ -1,3 +1,5 @@
 <p>Application footer content</p>
 
-<p class="c-ideil">© {{ 'now'|date('Y') }} ідейл</p>
+<p class="c-copy">© {{ 'now'|date('Y') }} ideil</p>
+
+<p class="c-ideil">made by <a href="#">ideil</a></p>
