--- a/generators/app/templates/static/src/less/components/app-footer.less
+++ b/generators/app/templates/static/src/less/components/app-footer.less
@@ -4,10 +4,13 @@
 
 // .c-footer {}
 
+// .c-copy {}
+
 .c-ideil {
     font-weight: normal;
 
     a {
+        color: @text-color;
         font-weight: bold;
     }
 }
