add link href to ideil website

--- a/generators/app/templates/static/layouts/_includes/_parts/app-footer.twig
+++ b/generators/app/templates/static/layouts/_includes/_parts/app-footer.twig
@@ -2,4 +2,4 @@
 
 <p class="c-copy">© {{ 'now'|date('Y') }} ideil</p>
 
-<p class="c-ideil">made by <a href="#">ideil</a></p>
+<p class="c-ideil">made by <a href="https://www.ideil.com/">ideil</a></p>
