add photoswipe, update bootstrap and jquery repositories

--- a/generators/app/templates/static/layouts/_includes/_parts/app-js.twig
+++ b/generators/app/templates/static/layouts/_includes/_parts/app-js.twig
@@ -12,6 +12,9 @@
 {# <script src="/src/js/vendor/bootstrap/FILE_NAME.js"></script> #}
 {# Carousel #}
 {# <script src="/src/js/vendor/slick.js"></script> #}
+{# Photoswipe #}
+{# <script src="/src/js/vendor/photoswipe.min.js"></script> #}
+{# <script src="/src/js/vendor/photoswipe-ui-default.min.js"></script> #}
 
 {# 4. Atom #}
 {# <script src="/src/js/atom/FILE_NAME.js"></script> #}
@@ -19,3 +22,4 @@
 {# 5. Application #}
 {# <script src="/src/js/app.js"></script> #}
 {# <script src="/src/js/carousel.js"></script> #}
+{# <script src="/src/js/photoswipe.js"></script> #}
