--- a/generators/app/templates/static/layouts/_includes/_templates/base.twig
+++ b/generators/app/templates/static/layouts/_includes/_templates/base.twig
@@ -15,6 +15,9 @@
             {% include '../_parts/app-footer.twig' %}
         </footer>
 
+        {% include '../_parts/photoswipe.twig' %}
+
         {% include '../_parts/app-js.twig' %}
+
     </body>
 </html>
