--- a/generators/app/templates/static/src/less/app.less
+++ b/generators/app/templates/static/src/less/app.less
@@ -4,7 +4,8 @@
 //*
 
 // @import "vendor/slick.less";
-
+// @import "vendor/photoswipe.less";
+// @import "vendor/default-skin.less";
 
 //## Ideil Atom
 //
