--- a/generators/app/templates/static/layouts/_includes/_parts/app-head.twig
+++ b/generators/app/templates/static/layouts/_includes/_parts/app-head.twig
@@ -1,16 +1,16 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{{ title }}</title>
+    <title>{% for page in pages %}{% if page.id == pageId %}{{page.id}} {{page.title}}{% endif %}{% endfor %} | {{ brandName }}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {# Favicon #}
     {# Path: "project-name/static.www/" #}
 
-    <link rel="stylesheet" href="/src/css/app.css">
+    <link rel="stylesheet" href="../../src/css/app.css">
 
     {# Modernizr #}
     {# Initial build: http://modernizr.com/download/#-cssclasses-teststyles-testprop-testallprops-prefixes-domprefixes #}
-    <script src="/src/js/vendor/modernizr.min.js"></script>
+    <script src="../../src/js/vendor/modernizr.min.js"></script>
 </head>
