--- a/generators/app/templates/static/src/less/components/app-icons.less
+++ b/generators/app/templates/static/src/less/components/app-icons.less
@@ -2,9 +2,7 @@
 //
 //*
 
-.i-icon {
-    &:extend(.text-hide);
-
-    display: inline-block;
-    vertical-align: middle;
+.i-svg {
+    display: block;
+    fill: inherit;
 }
