--- a/generators/app/templates/static/src/less/vars-app.less
+++ b/generators/app/templates/static/src/less/vars-app.less
@@ -7,7 +7,9 @@
 //
 //* Gray and brand colors for use across Bootstrap.
 
-@text-color-light:      @body-bg;
+@text-color-inverse:      @body-bg;
+
+@body-bg-inverse:         @text-color;
 
 
 //## Grid
@@ -17,19 +19,3 @@
 @layout-padding-x:      @gutter;
 
 @content-max-width:     @screen-lg;
-
-
-//## Banner
-//
-//*
-
-// @banner-height:         auto;           // reserved
-// @screen-sticky-banner:  @screen-md-min; // reserved
-
-
-//## Footer
-//
-//*
-
-// @app-footer-height:         auto;           // reserved
-// @screen-sticky-footer:      @screen-md-min; // reserved
