--- a/generators/app/templates/static/layouts/_includes/00-home.twig
+++ b/generators/app/templates/static/layouts/_includes/00-home.twig
@@ -1,20 +1,20 @@
 {% extends '_templates/base.twig' %}
 
-{% set pageId = '00-home' %}
-{% set title = '00 Home' %}
+{% set pageId = '00' %}
 
 {% block content %}
     <h1>Page heading</h1>
 
-    <a href="{% include '_path' with { pageId: '00-home' } %}">Link Home</a>
+    <a href="{% include '_path' with { pageId: '00' } %}">Link Home</a>
 
-    <ul class="list-inline js-pswp">
-        <li><a title="100" href="https://unsplash.it/2200/2200?image=100"><img src="https://unsplash.it/200/200?image=100" alt=""></a></li>
-        <li><a title="101" href="https://unsplash.it/2200/2200?image=101"><img src="https://unsplash.it/200/200?image=101" alt=""></a></li>
-        <li><a title="102" href="https://unsplash.it/2200/2200?image=102"><img src="https://unsplash.it/200/200?image=102" alt=""></a></li>
-        <li><a title="103" href="https://unsplash.it/2200/2200?image=103"><img src="https://unsplash.it/200/200?image=103" alt=""></a></li>
-        <li><a title="104" href="https://unsplash.it/2200/2200?image=104"><img src="https://unsplash.it/200/200?image=104" alt=""></a></li>
-    </ul>
+    {% include 'modal/btn.twig' with {
+        class: 'btn btn-primary',
+        text: 'Button modal',
+        target: 'DemoModal'
+    } %}
 
-    {% include '_parts/modal-btn.twig' with { text: 'Launch Demo Modal'} %}
+    {% include 'modal/_base.twig' with {
+        id: 'DemoModal'
+    } %}
+
 {% endblock %}
