--- a/generators/app/templates/static/layouts/_includes/_parts/app-js.twig
+++ b/generators/app/templates/static/layouts/_includes/_parts/app-js.twig
@@ -1,7 +1,7 @@
 {# RESPECT THE ORDER #}
 
 {# 1. Libraries #}
-{# <script src="/src/js/vendor/"></script> #}
+{# <script src="../../src/js/vendor/"></script> #}
 
 {# 2. API #}
 {# https://developers.google.com/maps/documentation/javascript/tutorial?hl=ru #}
@@ -9,17 +9,17 @@
 
 {# 3. Plugins #}
 {# Bootstrap #}
-{# <script src="/src/js/vendor/bootstrap/FILE_NAME.js"></script> #}
+{# <script src="../../src/js/vendor/bootstrap/FILE_NAME.js"></script> #}
 {# Carousel #}
-{# <script src="/src/js/vendor/slick.js"></script> #}
+{# <script src="../../src/js/vendor/slick.js"></script> #}
 {# Photoswipe #}
-{# <script src="/src/js/vendor/photoswipe.min.js"></script> #}
-{# <script src="/src/js/vendor/photoswipe-ui-default.min.js"></script> #}
+{# <script src="../../src/js/vendor/photoswipe.min.js"></script> #}
+{# <script src="../../src/js/vendor/photoswipe-ui-default.min.js"></script> #}
 
 {# 4. Atom #}
-{# <script src="/src/js/atom/FILE_NAME.js"></script> #}
+{# <script src="../../src/js/atom/FILE_NAME.js"></script> #}
 
 {# 5. Application #}
-{# <script src="/src/js/app.js"></script> #}
-{# <script src="/src/js/carousel.js"></script> #}
-{# <script src="/src/js/photoswipe.js"></script> #}
+{# <script src="../../src/js/app.js"></script> #}
+{# <script src="../../src/js/carousel.js"></script> #}
+{# <script src="../../src/js/photoswipe.js"></script> #}
