--- a/generators/app/templates/static/src/less/components/type.less
+++ b/generators/app/templates/static/src/less/components/type.less
@@ -56,9 +56,7 @@ textarea {
 //*
 
 abbr[title] {
+    text-decoration: none;
     border-bottom: 0;
-
-    a & {
-        cursor: inherit;
-    }
+    cursor: inherit !important;
 }
