bootstrap latest version, changed LESS to SASS

--- a/generators/app/templates/static/layouts/_includes/_templates/base.twig
+++ b/generators/app/templates/static/layouts/_includes/_templates/base.twig
@@ -15,7 +15,7 @@
             {% include '../_parts/app-footer.twig' %}
         </footer>
 
-        {% include '../_parts/photoswipe.twig' %}
+        {# {% include '../_parts/photoswipe.twig' %} #}
 
         {% include '../_parts/app-js.twig' %}
 
