--- a/generators/app/templates/static/src/scss/components/app-footer.scss
+++ b/generators/app/templates/static/src/scss/components/app-footer.scss
@@ -10,7 +10,7 @@
     font-weight: normal;
 
     a {
-        color: @text-color;
+        color: $body-color;
         font-weight: bold;
     }
 }
