utilities veriables fix

--- a/generators/app/templates/static/src/scss/components/utilities.scss
+++ b/generators/app/templates/static/src/scss/components/utilities.scss
@@ -8,15 +8,15 @@
 //*
 
 .u-spacer-b {
-    margin-bottom: $spacer !important;
+    margin-bottom: $offset !important;
 }
 
 .u-spacer-b-sm {
-    margin-bottom: $spacer-sm !important;
+    margin-bottom: offset(sm) !important;
 }
 
 .u-spacer-b-lg {
-    margin-bottom: $spacer-lg !important;
+    margin-bottom: offset(lg) !important;
 }
 
 
@@ -25,16 +25,16 @@
 //*
 
 .u-gutter-x-sm {
-    padding-left: $gutter-sm !important;
-    padding-right: $gutter-sm !important;
+    padding-left: gutter(sm) !important;
+    padding-right: gutter(sm) !important;
 }
 
 .u-gutter-l-sm {
-    padding-left: $gutter-sm !important;
+    padding-left: gutter(sm) !important;
 }
 
 .u-gutter-r-lg {
-    padding-right: $gutter-sm !important;
+    padding-right: gutter(sm) !important;
 }
 
 
