update filesystem, sass, added critical tasks

--- a/generators/app/templates/static/src/scss/components/app-icons.scss
+++ b/generators/app/templates/static/src/scss/components/app-icons.scss
@@ -1,4 +1,22 @@
-//# Application (interface) Icons
+//# Interface Icons
+//
+//*
+
+//## Generated sprites styles
+
+@import "../sprites/ii";
+
+
+//## Sprites
+//
+//*
+
+.i-ii {
+    display: block;
+}
+
+
+//## SVG icons
 //
 //*
 
@@ -6,3 +24,4 @@
     display: block;
     fill: inherit;
 }
+
