--- a/generators/app/templates/static/layouts/_includes/parts/app-js.twig
+++ b/generators/app/templates/static/layouts/_includes/parts/app-js.twig
@@ -1,4 +1,4 @@
-{# RESPECT THE ORDER #}
+{# <script src="../../src/js/dev/misc.js"></script> #}
 
 {# 1. Libraries #}
 {# <script src="js/vendor/modernizr.min.js"></script> #}
@@ -21,9 +21,14 @@
 {# <script src="../../src/js/atom/FILE_NAME.js"></script> #}
 
 {# 5. Application #}
-{# <script src="../../src/js/app.js"></script> #}
+{# <script src="../../src/js/build/manifest.js"></script> #}
+{# <script src="../../src/js/build/vendor.js"></script> #}
+
+{# <script src="../../src/js/build/common.js"></script> #}
+
 {# <script src="../../src/js/carousel.js"></script> #}
 {# <script src="../../src/js/photoswipe.js"></script> #}
+
 
 {# 5. Etc. #}
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
