--- a/generators/app/templates/static/src/scss/components/forms.scss
+++ b/generators/app/templates/static/src/scss/components/forms.scss
@@ -3,16 +3,6 @@
 //*
 
 
-//## Input
-//
-//* Extra small variant
-
-// $input-height-xs:          (floor($font-size-sm * $line-height-sm) + ($input-btn-padding-x-sm * 2));
-
-// .input-xs {
-//     height: $input-height-xs;
-//     padding: $input-btn-padding-y-sm $input-btn-padding-x-sm;
-//     font-size: $font-size-sm;
-//     line-height: $line-height-sm;
-//     border-radius: $input-border-radius-sm;
+// .form-control {
+//     &::placeholder {}
 // }
