update grid system; fix grunt sass extension

--- a/generators/app/templates/static/src/scss/components/grid.scss
+++ b/generators/app/templates/static/src/scss/components/grid.scss
@@ -2,14 +2,11 @@
 //
 //*
 
-body {
-    max-width: $layout-max-width;
-    margin-left: auto;
-    margin-right: auto;
-}
 
 .o-box {
-    @include make-container;
-
-    max-width: $content-max-width;
+    max-width: box();
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: gap();
+    padding-right: gap();
 }
