--- a/generators/app/templates/static/layouts/_includes/app/_head.twig
+++ b/generators/app/templates/static/layouts/_includes/app/_head.twig
@@ -1,16 +1,7 @@
 <meta charset="utf-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-<title>
-    {%- for meta in pages %}
-        {%- if meta.id == PID %}
-            {{- meta.no ~ ' ' }}
-            {{- meta.title ~ ' ' }}
-        {%- endif %}
-    {%- endfor %}
-    |
-    {{- ' ' ~ app[0].title -}}
-</title>
+<title>{{ PAGE.no ~ ' ' ~ PAGE.title ~ ' | ' ~ APP.title }}</title>
 
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,5 +11,6 @@
 <!-- <link rel="apple-touch-icon" href="icon.png"> -->
 <!-- Place favicon.ico in the root directory -->
 
-<link rel="stylesheet" href="../../src/css/bs.css">
-<link rel="stylesheet" href="../../src/css/app.css">
+{% for css in APP.css %}
+    <link rel="stylesheet" href="{{ PATH.css ~ css }}{{ IS_PUB ? '.min' }}.css">
+{% endfor %}
