added gitlab pages (gitlab-ci); scripts and styles updates.

--- a/generators/app/templates/static/src/scss/components/reboot.scss
+++ b/generators/app/templates/static/src/scss/components/reboot.scss
@@ -5,7 +5,13 @@
 
 body {
     fill: $body-color;
+
+    @if $font-smothing {
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+    }
 }
+
 
 //## Transitions
 //
