functions and mixins to work w/ svg and graphics

--- a/generators/app/templates/static/src/scss/components/app-icons.scss
+++ b/generators/app/templates/static/src/scss/components/app-icons.scss
@@ -25,3 +25,10 @@
     fill: inherit;
 }
 
+@each $item, $map in $socials {
+    .i-#{ $item } {
+        &:before {
+            @include pseudo-svg($map);
+        }
+    }
+}
